# e11ocutionist

./: .cursorrules  .gitignore  .pre-commit-config.yaml  BUILD_AND_RELEASE.md  CHANGELOG.md  MANUAL_WORKFLOW_SETUP.md  PLAN.md  README.md  TODO.md  UPDATE.sh  legacy_src.txt  mkdocs.yml  output.txt  pyproject.toml  src.txt
.cursor/rules/: data-flow-diagram.mdc  entity-processing-model.mdc  semantic-chunking-algorithm.mdc  text-enhancement-pipeline.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  push.yml  release.yml
.specstory/history/: 2025-05-16_16-26-improving-todo-document-version.md  2025-05-16_16-42-implementing-todo-after-reviewing-legacy.md  2025-05-16_17-14-dodawanie-cen-rynkowych-składników.md  2025-05-16_18-20-code-analysis-and-todo-update.md  2025-05-16_18-56-executing-shell-script-update-sh.md  2025-05-16_18-58-executing-shell-script-update-sh.md  2025-05-16_19-16-executing-update-script.md  2025-05-16_19-32-executing-update-script.md  2025-05-16_19-32-untitled.md  2025-05-16_19-37-untitled.md  2025-05-16_19-45-executing-update-script.md  2025-05-16_20-04-executing-update-script.md  2025-05-16_23-35-executing-update-script.md  2025-05-16_23-35-untitled.md  2025-05-16_23-50-executing-update-sh-script.md  2025-05-16_23-50-untitled.md  2025-05-17_00-17-update-script-and-revise-todo-list.md  2025-05-17_00-24-script-update-and-todo-management.md  2025-05-17_00-24-untitled.md  2025-05-17_00-58-untitled.md  2025-05-17_00-58-update-script-execution-and-test-improvement.md  2025-05-17_01-25-implementing-tests-from-todo-md.md  2025-05-17_01-25-untitled.md  2025-05-17_11-57-coupon-code-generation-errors.md
docs/: changelog.md  cli-reference.md  getting-started.md  how-it-works.md  index.md  python-api.md
legacy_src/: LEGACY.md  malmo_11labs.py  malmo_all.py  malmo_chunker.py  malmo_entitizer.py  malmo_neifix.py  malmo_orator.py  malmo_tonedown.py  sapko.sh  say_11labs.py
scripts/: build-all.sh  build-binary.sh  build.sh  release.sh  test.sh
src/e11ocutionist/: __init__.py  __main__.py  chunker.py  cli.py  e11ocutionist.py  elevenlabs_converter.py  elevenlabs_synthesizer.py  entitizer.py  neifix.py  orator.py  tonedown.py  utils.py
tests/: conftest.py  test_chunker.py  test_chunker_semantic.py  test_cli.py  test_elevenlabs_converter.py  test_elevenlabs_synthesizer.py  test_entitizer.py  test_error_handling.py  test_integration.py  test_neifix.py  test_orator.py  test_package.py  test_performance.py  test_pipeline.py  test_security.py  test_tonedown.py  test_version.py
tests/fixtures/: test_document.xml
