# this_file: pyproject.toml
[project]
name = "e11ocutionist"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "fire",
    "lxml",
    "types-lxml",
    "loguru",
    "litellm>=1.67.2",
    "python-dotenv",
    "tenacity",
    "rich",
    "tiktoken",
    "backoff",
    "elevenlabs",
]


[project.optional-dependencies]

dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyupgrade>=3.19.0",
    # Stubs for mypy
    "lxml-stubs",
    # types-loguru is not a common package, loguru aims to be PEP 561 compatible
    # For tiktoken, backoff, tenacity, elevenlabs, litellm, dotenv stubs might not exist
    # or might need to be handled via mypy config or inline ignores if they cause issues.
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]


all = [
    "pre-commit>=3.6.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyupgrade>=3.19.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "fire",
    "lxml",
    "types-lxml",
    "loguru",
    "litellm>=1.67.2",
    "python-dotenv",
    "tenacity",
    "rich",
    "tiktoken",
    "backoff",
    "elevenlabs",
]

[project.scripts]
e11ocutionist = "e11ocutionist.__main__:main"



[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"

[project.urls]
Documentation = "https://github.com/twardoch/e11ocutionist#readme"
Issues = "https://github.com/twardoch/e11ocutionist/issues"
Source = "https://github.com/twardoch/e11ocutionist"


[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.21.0", 
    "hatch-vcs>=0.3.0"
]


[tool.coverage.paths]
e11ocutionist = ["src/e11ocutionist", "*/e11ocutionist/src/e11ocutionist"]
tests = ["tests", "*/e11ocutionist/tests"]



[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
source_pkgs = ["e11ocutionist", "tests"]
branch = true
parallel = true
omit = [
    "src/e11ocutionist/__about__.py",
]



[tool.hatch.build.hooks.vcs]
version-file = "src/e11ocutionist/__version__.py"


[tool.hatch.build.targets.wheel]
packages = ["src/e11ocutionist"]



[tool.hatch.envs.default]
dependencies = [
  "mypy>=1.0.0",
  "lxml-stubs",
  # Add other missing stubs here if necessary after next mypy run
  # For packages without stubs, we might need to configure mypy to ignore them:
  # loguru, backoff, tenacity, elevenlabs, tiktoken, litellm, dotenv (if types-python-dotenv isn't enough for 'dotenv')
]

# Ensure the environment installs the project itself along with its "test" extras
features = ["test"]


[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/e11ocutionist --cov=tests {args:tests}"
typecheck = "mypy src/e11ocutionist tests"
lint = "ruff check src/e11ocutionist tests"
format = "ruff format --respect-gitignore src/e11ocutionist tests"
fix = "ruff check --fix --unsafe-fixes src/e11ocutionist tests && ruff format --respect-gitignore src/e11ocutionist tests"


[tool.hatch.envs.lint]
detached = true
dependencies = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]


[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/e11ocutionist tests}"
"lint:check" = "ruff check {args:src/e11ocutionist tests .}"
"lint:fmt" = "ruff format --check --respect-gitignore {args:src/e11ocutionist tests .}"
"format:apply" = "ruff format --respect-gitignore {args:src/e11ocutionist tests .}"
"fix:apply" = "ruff check --fix --unsafe-fixes {args:src/e11ocutionist tests .} && ruff format --respect-gitignore {args:src/e11ocutionist tests .}"
"all:check" = ["lint:check", "lint:fmt", "typing"] # The values here refer to other script keys


[tool.hatch.envs.test]
dependencies = [
]

[tool.hatch.envs.test.scripts]
test = "python -m pytest -n auto -p no:briefcase {args:tests}"
test-cov = "python -m pytest -n auto -p no:briefcase --cov-report=term-missing --cov-config=pyproject.toml --cov=src/e11ocutionist --cov=tests {args:tests}"
bench = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only"
bench-save = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only --benchmark-json=benchmark/results.json"

[tool.hatch.version]
source = "vcs"


[tool.hatch.version.raw-options]
version_scheme = "post-release"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "pytest",
    "loguru",
    "backoff",
    "tenacity",
    "elevenlabs",
    "elevenlabs.*", # To cover submodules like elevenlabs.api
    "tiktoken",
    "dotenv",
    "litellm",
    "fire",
]
ignore_missing_imports = true


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = ["ARG001", "E501", "I001", "RUF001", "PLR2004", "EXE003", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]





[tool.pytest.ini_options]
addopts = "-v --durations=10 -p no:briefcase"
asyncio_mode = "auto"
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
log_cli_level = "INFO"
markers = [
  "benchmark: marks tests as benchmarks (select with '-m benchmark')",
  "unit: mark a test as a unit test",
  "integration: mark a test as an integration test",
  "permutation: tests for permutation functionality",
  "parameter: tests for parameter parsing",
  "prompt: tests for prompt parsing",
]
norecursedirs = [
  ".*",
  "build",
  "dist",
  "venv",
  "__pycache__",
  "*.egg-info",
  "_private",
]

python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]


[tool.pytest-benchmark]
min_rounds = 100
min_time = 0.1
histogram = true
storage = "file"
save-data = true 